--- a/game2/game2.html
+++ b/game2/game2.html
@@ -47,5 +47,8 @@
             <canvas id="myCanvas" width="490" height="220"></canvas>
         </div>
         <button id="save_btn">Save drawing</button>
+        <div id="test">
+            
+        </div>
     </body>
 </html>
