playing around with import. Not cool

--- a/game2/game2.html
+++ b/game2/game2.html
@@ -8,7 +8,7 @@
         <link id="css" rel="stylesheet" type="text/css" href="game2.css">
         <script src="game2.js" async=""></script>
     </head>
-    <body onload="pageLoad()">
+    <body>
         <header>
             <h1>Game 2</h1>
         </header>
@@ -46,6 +46,7 @@
             </div>
             <canvas id="myCanvas" width="490" height="220"></canvas>
         </div>
+        <a href="#" class="button" id="btn_download" download="my-file-name.png">Download</a>
         <button id="save_btn">Save drawing</button>
     </body>
 </html>
