Working over style. Fixed canvas width and heght in game 2

--- a/game3/game3.html
+++ b/game3/game3.html
@@ -31,6 +31,7 @@
         <div id="div_canvas">
             <canvas id="myCanvas"></canvas>
         </div>
+        <a href="#" class="button" id="btn_download" download="my-file-name.png">Download</a>
         <button id="save_btn">Save drawing</button>
     </body>
 </html>
