--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
 <!doctype html>
-<html> 
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Meme Generator
-        </title>
-        <link id="css" rel="stylesheet" type="text/css" href="meme_gen.css">
-        <script src="meme_gen.js" async=""></script>
-    </head>
-    <body>
-        <header>
-            <h1>A Generator for Memes</h1>
-        </header>
-        <main>
-            <h3> The idea of this site is to create funny drawings,images or photos and add text to them. You can then save what you created on your device</h3>
-            <h4>Choose one from the following games to play.</h4>
-            <div>
-                <a href="game1\game1.html" class="button">game1</a>
-                <a href="game2\game2.html" class="button">game2</a>
-                <a href="game3\game3.html" class="button">game3</a>
-                <a href="game4\game4.html" class="button">game4</a>
+<html>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        Meme Generator
+    </title>
+    <link id="css" rel="stylesheet" type="text/css" href="meme_gen.css">
+    <script src="meme_gen.js" async=""></script>
+</head>
+
+<body>
+    <header>
+        <h1>A Creator of Memes</h1>
+    </header>
+    <main>
+        <div id="h3div">
+            <h3> The idea of this site is to create funny drawings,images or photos and add text to them. You can then
+                save what you created on your device</h3>
+        </div>
+        <div class="container">
+            <div id="h4div">
+                <h4>Choose one from the following games to play.</h4>
             </div>
-            <div>
-                <button>Game 1</button>
-                <button>Game 2</button>
-                <button>Game 3</button>
-                <button>Game 4</button>
+
+            <div id="links">
+
+                <div class="link_div">
+                    <a href="game1\game1.html" class="button">Click me to play the Text-Game!</a>
+                    <p>In this game a random image from our database is loaded. Your task is to write text corresponding
+                        to the loaded image!</p>
+                    <p>Be creative!</p>
+                </div>
+                <div class="link_div">
+                    <a href="game2\game2.html" class="button">Choose me if you love to paint!</a>
+                    <p> In this game a random text from our database is loaded. Your task is to draw something
+                        corresponding to the loaded text!</p>
+                    <p>Use the colors!</p>
+                </div>
+                <div class="link_div">
+                    <a href="game3\game3.html" class="button">Click me to play the Image-Game!</a>
+                    <p>In this game another random text from our database is loaded. Your task this time is to upload or
+                        take a photo corresponding to the loaded text!</p>
+                    <p>Capture the moment!</p>
+                </div>
+
             </div>
-        </main>
-    </body>
+        </div>
+
+    </main>
+</body>
+
 </html>
