--- a/game3/game3.html
+++ b/game3/game3.html
@@ -27,7 +27,9 @@
             <input type="file" accept="image/*" id="file_input">
             <textarea id="target">You can drag an image file here</textarea>
         </div>
-
+        <div id="placeTextButtonDiv">
+            
+        </div>
         <div id="div_canvas">
             <canvas id="myCanvas"></canvas>
         </div>
