fixing save buttons

--- a/game1/game1.html
+++ b/game1/game1.html
@@ -46,7 +46,7 @@
         <canvas id="canvas"></canvas>
     </div>
     <div id="save_div" class="container">
-        <a href="#" class="button" id="save_btn" download="my-file-name.png">Download</a>
+        <a href="#" class="button" id="save_btn" download="my-file1-name.png">Download</a>
     </div>
 </body>
 
