--- a/game2/game2.html
+++ b/game2/game2.html
@@ -46,6 +46,6 @@
             </div>
             <canvas id="myCanvas" width="490" height="220"></canvas>
         </div>
-        <a href="#" class="button" id="btn_download" download="my-file-name.png">Download</a>
+        <a href="#" class="button" id="btn_download" download="my-file2-name.png">Download</a>
     </body>
 </html>
