--- a/game3/game3.html
+++ b/game3/game3.html
@@ -33,7 +33,6 @@
         <div id="div_canvas">
             <canvas id="myCanvas"></canvas>
         </div>
-        <a href="#" class="button" id="btn_download" download="my-file-name.png">Download</a>
-        <button id="save_btn">Save drawing</button>
+        <a href="#" class="button" id="btn_download" download="my-file3-name.png">Download</a>
     </body>
 </html>
