--- a/index_2.html
+++ b/index_2.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div class="container pb-2">
+        <div class="container pt-2 pb-2">
             <h1 class="text-center">A Creator of Memes</h1>
         </div>
     </header>
@@ -31,20 +31,20 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <a href="game1\game1.html" class="btn btn-success btn-block mb-1">Play the Text-Game!</a>
+                        <a href="game1\game1.html" class="btn btn-success btn-block mb-2">Play the Text-Game!</a>
                         <p>In this game a random image is loaded. Your task is to write text
                             corresponding
                             to the loaded image!</p>
                         <p>Be creative!</p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <a href="game2\game2.html" class="btn btn-success btn-block mb-1">Play to Paint!</a>
+                        <a href="game2\game2.html" class="btn btn-success btn-block mb-2">Play to Paint!</a>
                         <p class="align-middle"> In this game a random text is loaded. Your task is to draw something
                             corresponding to the loaded text!</p>
                         <p>Use the colors!</p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <a href="game3\game3.html" class="btn btn-success btn-block mb-1">Play the Image-Game!</a>
+                        <a href="game3\game3.html" class="btn btn-success btn-block mb-2">Play the Image-Game!</a>
                         <p>In this game another random text is loaded. Upload or
                             take a photo relative to the loaded text!</p>
                         <p>Capture the moment!</p>
