Finished styling of game 3

--- a/game2/game2.html
+++ b/game2/game2.html
@@ -3,14 +3,14 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            Game 2
+            Paint your Meme Game
         </title>
         <link id="css" rel="stylesheet" type="text/css" href="game2.css">
         <script src="game2.js" async=""></script>
     </head>
     <body>
         <header>
-            <h1>Game 2</h1>
+            <h1>Paint your Meme</h1>
         </header>
         <main>
             <h3>In this game a text is chosen at random from our database.</h3>
