--- a/game2/game2.html
+++ b/game2/game2.html
@@ -1,51 +1,132 @@
 <!doctype html>
-<html> 
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Paint your Meme Game
-        </title>
-        <link id="css" rel="stylesheet" type="text/css" href="game2.css">
-        <script src="game2.js" async=""></script>
-    </head>
-    <body>
-        <header>
-            <h1>Paint your Meme</h1>
-        </header>
-        <main>
-            <h3>In this game a text is chosen at random from our database.</h3>
-            <h3>Your task is to draw something that relates to this text. Be creative!</h3>
-            
-            <button id="btn">Generate Text</button>
-        </main>
+<html lang="en">
 
-        <div id="text_div">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <title>
+        Paint your Meme Game
+    </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link id="css" rel="stylesheet" type="text/css" href="game2.css">
+    <script src="game2.js" async=""></script>
+</head>
+
+<body>
+    <header>
+        <div class="container pt-2 pb-2">
+            <h1 class="text-center">Paint your Meme</h1>
+        </div>
+    </header>
+
+    <main>
+        <div id="h3_div" class="container mt-3 mb-3">
+            <h3 class="text-center">In this game a text is chosen at random from our database.</h3>
+        </div>
+
+        <div class="container mt-2 mb-3">
+            <h4 class="text-center">Your task is to draw something that relates to this text. Be creative!</h4>
+        </div>
+
+        <div class="container text-center mt-3 mb-3">
+            <button id="btn" class="btn btn-success mb-2">Generate Text</button>
+        </div>
+
+        <div id="text_div" class="container text-center">
 
         </div>
 
-        <div id="div_canvas">
-            <button id="clear_btn">Clear the canvas</button>
-            <div id="tools_div">
-                <button id="marker_btn">Marker</button>
-                <button id="eraser_btn">Eraser</button>
-            </div>
-            <div id="colors_div">
-                Colors:
-                <button id="red_btn">Red</button>
-                <button id="blue_btn">Blue</button>
-                <button id="green_btn">Green</button>
-                <button id="yellow_btn">Yellow</button>
-                <button id="purple_btn">Purple</button>
-            </div>
-            <div id="size_div">
-                Sizes:
-                <button id="small_btn">Small</button>
-                <button id="medium_btn">Medium</button>
-                <button id="large_btn">Large</button>
-                <button id="huge_btn">Huge</button>
-            </div>
-            <canvas id="myCanvas" width="490" height="220"></canvas>
+        <div id="placeTextBtnDiv" class="container text-center">
+
         </div>
-        <a href="#" class="button" id="btn_download" download="my-file2-name.png">Download</a>
-    </body>
+
+        <div id="mainDiv" class="container text-center">
+
+            <div id="div_canvas" class="container text-center">
+
+                <div class="container text-center mt-3 mb-2">
+                    <div>
+                        <button id="clear_btn" class="btn btn-outline-danger">Clear the canvas</button>
+                    </div>
+                </div>
+
+                <div class="container text-center mt-3 mb-2">
+                    <div class="btn-group btn-group-toggle row" data-toggle="buttons">
+                        <label class="btn btn-primary active">
+                            <input type="radio" name="options" id="marker_btn" autocomplete="off" checked> Marker
+                        </label>
+                        <label class="btn btn-primary">
+                            <input type="radio" name="options" id="eraser_btn" autocomplete="off"> Eraser
+                        </label>
+                    </div>
+                </div>
+
+
+
+                <div class="container text-center mt-3 mb-2">
+                    <div class="btn-group btn-group-toggle row" data-toggle="buttons">
+                        <label class="btn btn-secondary active">
+                            <input type="radio" name="options" id="small_btn" autocomplete="off" checked> Small
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="medium_btn" autocomplete="off"> Medium
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="large_btn" autocomplete="off"> Large
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="huge_btn" autocomplete="off"> Huge
+                        </label>
+                    </div>
+                </div>
+
+                <div class="container text-center">
+                    <canvas id="myCanvas" width="490" height="220"></canvas>
+                </div>
+
+                <div class="container text-center mt-1 mb-2">
+                    <div class="btn-group btn-group-toggle row" data-toggle="buttons">
+
+                        <label class="btn btn-secondary active">
+                            <input type="radio" name="options" id="red_btn" autocomplete="off" checked> Red
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="blue_btn" autocomplete="off"> Blue
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="green_btn" autocomplete="off"> Green
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="yellow_btn" autocomplete="off"> Yellow
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" name="options" id="purple_btn" autocomplete="off"> Purple
+                        </label>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="container text-center mt-1 mb-3">
+                <a href="#" class="btn btn-success" id="btn_download" download="my-file2-name.png">Download</a>
+            </div>
+
+        </div>
+
+
+    </main>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
