--- a/game3/game3.html
+++ b/game3/game3.html
@@ -49,7 +49,7 @@
                 <div class="input-group">
 
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" accept="image/*" capture="camera" id="file_input"
+                        <input type="file" class="custom-file-input" accept="image/*" capture id="file_input"
                             aria-describedby="inputGroupFileAddon01">
                         <label class="custom-file-label" for="file_input">Choose file</label>
                     </div>
