--- a/game3/game3.html
+++ b/game3/game3.html
@@ -48,7 +48,7 @@
             <div class="container pl-4 pl-5">
                 <div class="input-group">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" accept="image/*;caputer=camera" id="file_input"
+                        <input type="file" class="custom-file-input" accept="image/*;capture=camera" id="file_input"
                             aria-describedby="inputGroupFileAddon01">
                         <label class="custom-file-label" for="file_input">Take new Photo</label>
 
