--- a/game3/game3.html
+++ b/game3/game3.html
@@ -45,16 +45,17 @@
         <div id="main_input_div">
 
 
-            <div class="container pl-4 pl-5">
+            <div class="container pl-4 pl-5" id="takePhotoDiv">
                 <div class="input-group">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" accept="image/*;capture=camera" id="file_input"
+                        <input type="file" class="custom-file-input" capture="camera" id="file_input"
                             aria-describedby="inputGroupFileAddon01">
                         <label class="custom-file-label" for="file_input">Take new Photo</label>
 
                     </div>
                 </div>
             </div>
+            
             <div class="container pl-4 pl-5 mt-1">
                 <div class="input-group">
                     <div class="custom-file">
