NEVER TEST YOUR APPS WITH FB BROWSER YOU FAGGOT

--- a/game3/game3.html
+++ b/game3/game3.html
@@ -44,24 +44,12 @@
         -->
         <div id="main_input_div">
 
-
-            <div class="container pl-4 pl-5" id="takePhotoDiv">
-                <div class="input-group">
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" capture="camera" id="file_input"
-                            aria-describedby="inputGroupFileAddon01">
-                        <label class="custom-file-label" for="file_input">Take new Photo</label>
-
-                    </div>
-                </div>
-            </div>
-            
             <div class="container pl-4 pl-5 mt-1">
                 <div class="input-group">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" accept="image/*" id="file_input2"
+                        <input type="file" class="custom-file-input" accept="image/*" id="file_input"
                             aria-describedby="inputGroupFileAddon01">
-                        <label class="custom-file-label" for="file_input2">Upload existing Photo</label>
+                        <label class="custom-file-label" for="file_input">Upload existing Photo</label>
 
                     </div>
                 </div>
