--- a/game3/game3.html
+++ b/game3/game3.html
@@ -49,7 +49,7 @@
                     <div class="custom-file">
                         <input type="file" class="custom-file-input" accept="image/*" id="file_input"
                             aria-describedby="inputGroupFileAddon01">
-                        <label class="custom-file-label" for="file_input">Upload existing Photo</label>
+                        <label class="custom-file-label" for="file_input">Upload Photo</label>
 
                     </div>
                 </div>
