trying another fix for the scrolling problem

--- a/game2/game2.html
+++ b/game2/game2.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="container pt-2 pb-2">
-            <h1 class="text-center">Paint your MEME</h1>
+            <h1 class="text-center">Paint your Meme</h1>
         </div>
     </header>
 
