--- a/game2/game2.html
+++ b/game2/game2.html
@@ -22,7 +22,7 @@
 
     <main>
         <div id="h3_div" class="container mt-3 mb-3">
-            <h3 class="text-center">In this game a text is chosen at random from our database.</h3>
+            <h3 class="text-center">In this game a text is chosen randomly from our database.</h3>
         </div>
 
         <div class="container mt-2 mb-3">
