--- a/game1/game1.html
+++ b/game1/game1.html
@@ -28,8 +28,11 @@
             <h4 class="text-center">Your task is to add text to the generated image. Be creative!</h4>
         </div>
 
-
-        <div class="container text-center mt-3 mb-3">
+        <div class="container text-center mt-3">
+            <button id="link_btn" class="btn btn-danger mb-2 pl-4 pr-4">End Game</button>
+        </div>
+        
+        <div class="container text-center mt-2 mb-3">
             <button id="gen_btn" class="btn btn-success mb-2">Generate Image</button>
         </div>
 
