--- a/game2/game2.html
+++ b/game2/game2.html
@@ -29,6 +29,10 @@
             <h4 class="text-center">Your task is to draw something that relates to this text. Be creative!</h4>
         </div>
 
+        <div class="container text-center mt-3">
+            <button id="link_btn" class="btn btn-danger mb-2 pl-4 pr-4">End Game</button>
+        </div>
+
         <div class="container text-center mt-3 mb-3">
             <button id="btn" class="btn btn-success mb-2">Generate Text</button>
         </div>
