--- a/game3/game3.html
+++ b/game3/game3.html
@@ -29,6 +29,10 @@
                 Be creative!</h4>
         </div>
 
+        <div class="container text-center mt-3">
+            <button id="link_btn" class="btn btn-danger mb-2 pl-4 pr-4">End Game</button>
+        </div>
+
         <div class="container text-center mt-3 mb-3">
             <button id="btn" class="btn btn-success mb-1">Generate Text</button>
         </div>
