--- a/game2/game2.html
+++ b/game2/game2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta charset="utf-8">
     <title>
-        Paint your Meme Game
+        Draw your Meme Game
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="container pt-2 pb-2">
-            <h1 class="text-center">Draw your Meme</h1>
+            <h1 class="text-center">Paint your Meme</h1>
         </div>
     </header>
 
