drop target only on desktop

--- a/game3/game3.html
+++ b/game3/game3.html
@@ -58,13 +58,15 @@
                     </div>
                 </div>
             </div>
+            
+            <div id="drop_div">
+                <div class="container text-center mt-1">
+                    <h5> Or just drop your Picture here:</h5>
+                </div>
 
-            <div class="container text-center mt-1">
-                <h5> Or just drop your Picture here:</h5>
-            </div>
-
-            <div class="container text-center mt-1">
-                <textarea readonly id="target" class="text-center">Drop Picture</textarea>
+                <div class="container text-center mt-1">
+                    <textarea readonly id="target" class="text-center">Drop Picture</textarea>
+                </div>
             </div>
         </div>
 
