fix html header

--- a/game3/game3.html
+++ b/game3/game3.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="container pt-2 pb-2">
-            <h1 class="text-center">Upload your Picture 1</h1>
+            <h1 class="text-center">Upload your Picture</h1>
         </div>
     </header>
     <main>
